---
source: crates/math-core/tests/error_test.rs
expression: "\\genfrac(]{1pg}{2}{a+b}{c+d}"
---
Error: Expected length with units, found "1pg".
   ╭─[ <input>:1:11 ]
   │
 1 │ \genfrac(]{1pg}{2}{a+b}{c+d}
   │           ──┬──  
   │             ╰──── expected length here
───╯
